<resources>
    <string name="app_name" translatable="false">Native Alpha</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_prompt">UI Mode</string>
    <string name="global_settings">Global Settings</string>
    <string name="these_settings_are_applied_globally_and_override_app_specific_settings">These settings are used by all Web Apps, except those which explicitly override the global settings.</string>
    <string name="clear_cookies_after_usage">Clear cookies after usage</string>
    <string name="use_three_finger_swipes_to_switch_between_web_apps_experimental">Use three-finger swipes ⇄ to switch between Web Apps (experimental)</string>
    <string name="select_ui_mode">Select UI mode</string>
    <string name="save">Save</string>
    <string name="loading_icon_and_website_title">Loading icon and website title…</string>
    <string name="open_external_links_in_browser_app">Open external links in browser app</string>
    <string name="allow_javascript">Allow Javascript</string>
    <string name="accept_cookies">Accept cookies</string>
    <string name="accept_third_party_cookies">Accept third-party cookies</string>
    <string name="clear_cache_after_usage">Clear cache after usage</string>
    <string name="enable_adblock_experimental">Enable adblock</string>
    <string name="timeout_for_page_restore_in_minutes">Timeout in min</string>
    <string name="re_create_shortcut">Re-Create shortcut</string>
    <string name="create_shortcut_on_home_screen">Create shortcut on home screen</string>
    <string name="url" translatable="false">URL</string>
    <string name="use_two_finger_swipes_for_browser_forward_and_backward_navigation">Use two-finger swipes ⇄ for browser forward and backward navigation</string>
    <string-array name="ui_modes">
        <item>System default</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
    <string name="icon_fetch_failed_line1">We could not retrieve an icon for %1$s.\nPossible reasons:\n</string>
    <string name="icon_fetch_failed_line2">• No internet connection\n</string>
    <string name="icon_fetch_failed_line3">• The website has no suitable icon stored.</string>
    <string name="delete_question">Are you sure you want to remove this website?</string>
    <string name="enter_valid_url">Please enter a valid web address.</string>
    <string name="edit_webapp_settings">Edit Web App settings</string>
    <string name="add_webapp">Add Web App</string>
    <string name="welcome_msg">Welcome!\nAdd your first Web App:</string>
    <string name="restore_last_opened_page">Restore last opened page</string>
    <string name="request_website_in_desktop_version">Request website in desktop version</string>
    <string name="shortcut_icon">Shortcut Icon</string>
    <string name="shortcut_title">Shortcut Title</string>
    <string name="eula_title">End-user license agreement</string>
    <string name="eula_content">The software is provided “as is”, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and noninfringement. In no event shall the authors or copyright holders be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with the software or the use or other dealings in the software.</string>
    <string name="open_source_libs">Show used libraries</string>
    <string name="gnu_license">This software is released under GNU General Public License - Version 3.\nhttps://www.gnu.org/licenses/gpl-3.0.txt</string>
    <string name="app_info">About</string>
    <string name="license">License</string>
    <string name="os_libraries_title">Open source libraries</string>
    <string name="web_app_settings">Web App Settings</string>
    <string name="do_not_load_images">Do not load images</string>
    <string name="request_data_saving_page">Send \"Save Data\" request</string>
    <string name="ssl_error_msg_line1">This page has a problem with its SSL certificate.</string>
    <string name="ssl_error_unknown_authority">The certificate authority is not trusted.</string>
    <string name="ssl_error_expired">The certificate has expired.</string>
    <string name="ssl_error_id_mismatch">The certificate does not match the host name.</string>
    <string name="ssl_error_notyetvalid">The certificate is not yet valid.</string>
    <string name="ssl_error_msg_line2">It is not recommended to load the page.</string>
    <string name="ssl_error_title">Warning: Potential security threat</string>
    <string name="load_anyway">Load anyway</string>
    <string name="no_https_dialog_title">No HTTPS encryption</string>
    <string name="no_https_dialog_accept">Allow HTTP within this Web App</string>
    <string name="no_https_dialog_msg">This page uses an unencrypted HTTP connection. Do not enter any sensible data.</string>
    <string name="allow_http">Allow HTTP</string>
    <string name="webapp_section_security">Security &amp; Privacy</string>
    <string name="webapp_section_cookies">Cookies &amp; Ads</string>
    <string name="webapp_section_datasaving">Data saving</string>
    <string name="webapp_section_misc">Miscellaneous</string>
    <string name="paypal" translatable="false">" ☕ Buy me a coffee on PayPal"</string>
    <string name="webapp_section_restorepage">Restore page</string>
    <string name="import_failed">The backup could not restored.</string>
    <string name="import_success">Backup with %1$d Web App(s) was restored successfully.</string>
    <string name="export_failed">The backup could not be exported.</string>
    <string name="export_success">The backup was created successfully.</string>
    <string name="webapp_not_found">The Web App you are trying to reach is no longer available.</string>
    <string name="import_success_dialog_txt1">The backup contained</string>
    <string name="import_success_dialog_txt2">Do you want to re-create shortcuts for all Web Apps?</string>
    <string name="import_success_dialog_txt3">Please note you will have to manually confirm the addition of every shortcut.</string>
    <string name="no_filemanager">Please install a file manager.</string>
    <string name="export_settings_web_apps"><![CDATA[Export settings & Web Apps]]></string>
    <string name="import_settings_web_apps"><![CDATA[Import settings & Web Apps]]></string>
    <string name="global_settings_multitouch_reload">Use two-finger swipes ↓ to reload page</string>
    <string name="allow_location_access">Allow location access</string>
    <string name="allow_drm_content">Allow DRM content</string>
    <string name="dialog_permission_location_title">Location Permission Request</string>
    <string name="dialog_permission_location_txt">Do you want to grant this Web App access to your location? You can revoke this decision any time in the Web App Settings menu.</string>
    <string name="dialog_permission_drm_title">DRM Content</string>
    <string name="dialog_permission_drm_txt">Do you want allow this Web App to load DRM-protected content?</string>
    <string name="permission_location_rationale">If you want Web Apps to be able to retrieve your location, you can Native Alpha grant the permission to access the location. You can decide to grant the permission for every Web App individually.</string>
    <string name="permission_storage_rationale">If you want Native Alpha Web Apps to be able to download files, you have to accept the storage permission request.</string>
    <string name="file_download">File is being downloaded…</string>
    <string name="custom_icon">Select custom icon</string>
    <string name="show_progress_bar_during_page_load">Show progress bar during page load</string>
    <string name="user_agent">User Agent</string>
    <string name="use_custom_user_agent">Use custom user agent</string>
    <string name="insert_custom_user_agent">Insert custom user agent here…</string>
    <string name="webapp_autoreload">Auto-reload page</string>
    <string name="webapp_interval_for_reload">Interval in seconds</string>
    <string name="webapp_autoreload_switch">Refresh page regularly</string>
    <string name="hint_user_agent">Consult <![CDATA[<a href="https://www.whatismybrowser.com/guides/the-latest-user-agent/">WhatIsMyBrowser.com</a>]]> for a list of recent user agents.</string>
    <string name="label">Label</string>
    <string name="backup_import_done">Backup import finished</string>
    <string name="backup_imported_done_txt">The screen needs to be reloaded to apply the restored UI theme.</string>
    <string name="restore_shortcut">Do you want to restore the shortcut for <![CDATA[<b>%1$s</b>]]>?</string>
    <string name="force_dark_mode">Force Dark Mode</string>
    <string name="end">End</string>
    <string name="begin">Begin</string>
    <string name="limit_dark_mode_to_time_span">Limit Dark Mode to time span</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="expert_settings">Expert Settings</string>
    <string name="show_expert_settings">Show expert settings</string>
    <string name="ssl_errors">SSL Errors</string>
    <string name="ssl_permanent_warning">Only use this option for self-hosted non-production websites</string>
    <string name="ignore_ssl_errors">Ignore SSL errors</string>
    <string name="webapp_already_deleted">This Web App is no longer available. You can delete this shortcut.</string>
    <string name="override_global_settings">Override global settings</string>
    <string name="global_web_app_settings">Global Web App Settings</string>
    <string name="general">General</string>
    <string name="backup">Backup</string>
    <string name="use_google_safe_browsing">Use Google Safe Browsing</string>
    <string name="block_all_third_party_requests">Block all third-party requests</string>
    <string name="sandbox">Sandbox</string>
    <string name="no_sandbox">Do not use sandbox.</string>
    <string name="all_sandboxes_used">All sandboxes are currently in use.</string>
    <string name="enable_sandbox">Enable Sandbox</string>
    <string name="show_fullscreen">Full Screen (Immersive Mode)</string>
    <string name="site_not_found">Page could not be loaded.</string>
    <string name="icon_not_found">Icon could not be loaded.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="webapp_section_kiosk">Kiosk Mode</string>
    <string name="keep_screen_awake">Keep screen awake</string>
    <string name="dialog_permission_camera_title">Camera Access</string>
    <string name="dialog_permission_camera_txt">Do you want to grant this Web App access to your camera? You can revoke this decision any time in the Web App Settings menu.</string>
    <string name="allow_camera_access">Allow camera access</string>
    <string name="allow_microphone_access">Allow microphone access</string>
    <string name="dialog_permission_microphone_title">Microphone Access</string>
    <string name="dialog_permission_microphone_txt">Do you want to grant this Web App access to your microphone? You can revoke this decision any time in the Web App Settings menu.</string>
    <string name="app_name_plus" translatable="false">Native Alpha +</string>
    <string name="shortcut_already_exists">A shortcut with this name already exists. Please choose another name or delete the existing shortcut.</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="copy_url">Copy URL</string>
    <string name="share">Share</string>
    <string name="reload">Reload</string>
    <string name="activate_two_finger_zoom">Enable Pinch-To-Zoom</string>
    <string name="webapp_section_access_restriction">Access Restriction</string>
    <string name="bioprompt_restricted_webapp">Access Restriction</string>
    <string name="cancel">Cancel</string>
</resources>