<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/back"
          android:id="@+id/mItemBack"
          android:icon="@drawable/ic_baseline_arrow_back_24"/>
    <item android:title="@string/forward"
        android:id="@+id/mItemForward"
        android:icon="@drawable/ic_baseline_arrow_forward_24"/>
    <item android:title="@string/copy_url"
        android:id="@+id/mItemCopyUrl"
        android:icon="@drawable/ic_baseline_content_copy_24"/>
    <item android:title="@string/share"
        android:id="@+id/mItemShareUrl"
        android:icon="@drawable/ic_baseline_share_24"/>
    <item android:title="@string/reload"
        android:id="@+id/mItemReload"
        android:icon="@drawable/ic_baseline_refresh_24"/>

</menu>