<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_dialog"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/shortcut_icon" />

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="visible"
                app:cpb_background_progressbar_color="#b6bbd8"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_indeterminate_mode="true"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="#000000"
                app:cpb_progressbar_width="5dp"
                app:cpb_round_border="false" />

            <ImageView
                android:id="@+id/favicon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerInside"
                android:visibility="gone"
                app:srcCompat="@mipmap/native_alpha_shortcut" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/shortcut_title" />

            <EditText
                android:id="@+id/websiteTitle"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/loading_icon_and_website_title"
                android:inputType="text"
                android:textAllCaps="false" />


        </LinearLayout>

        <Button
            android:id="@+id/btnCustomIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_icon" />


    </LinearLayout>
</androidx.cardview.widget.CardView>